[package]
name = "lean_hashbrown"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.0", features = ["raw", "inline-more"], default-features = false }
lean-sys = { git = "https://github.com/SchrodingerZhu/lean-sys/", branch = "fix-init-std", default-features = false, features = ["small_allocator"] }
lean-base = { git = "https://github.com/SchrodingerZhu/lean-rs", branch = "no-std" }

[lib]
name = "lean_hashbrown"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

